# Voice-AI

./: README.md  pyproject.toml
tests/groq-connections/: test-connections.ipynb
tests/tts and stt/: stt.ipynb  tts.ipynb
tests/voice_inputs/: voice_test.ipynb
weya_takehome/chainlit_app/: app.py
weya_takehome/config/: config.py
weya_takehome/secrets/: config.ini
